[package]
name = "cezanne-mobile-monitor"
version = "0.1.1"
authors = ["aredden <alexander.h.redden@gmail.com>"]
edition = "2018"

[build-dependencies]
fs_extra = "1.2.0"

[dependencies]
libc = "0.2.99"
libloading = "0.7.0"
regex = "1.0.0"
lazy_static = "1.4.0"
serde = {version = "1.0.127", features = ["derive"]}
serde_json = "1.0.66"
glob =  "0.3.0"
ctrlc = "3.2.0"
